Revision history for Pod-Loom

0.03   NOT
	- If the template returns no POD, don't add a =cut
	- Changed required_attr to include filename in error message

0.02   October 20, 2009
	- INCOMPATIBLE CHANGE
	  Templates should now provide a _build_sections method
	  instead of a default value for sections
	- Added the Extender role for custom templates
	- Added support for Pod::Loom-group_COMMAND to Template

0.01   October 11, 2009
	- Initial release