@@ -83,6 +83,49 @@ use Exporter 'import';
 our @EXPORT_OK = qw(%E);
 
 #---------------------------------------------------------------------
+has _tmp_warned => (
+  is       => 'rw',
+  isa      => 'Bool',
+);
+
+=method warning
+
+  $tmp->warning($message);
+
+This method calls Perl's C<warn> builtin with the C<$message>.  If
+this is the first warning, it first prints a warning with the filename.
+
+=cut
+
+sub warning
+{
+  my ($self, $message) = @_;
+
+  unless ($self->_tmp_warned) {
+    warn "While processing " . $self->tmp_filename . "\n";
+    $self->_tmp_warned(1);
+  }
+
+  warn "  $message";
+} # end warning
+
+=method error
+
+  $tmp->error($message);
+
+This method calls Perl's C<die> builtin with the C<$message> after
+prepending the filename to it.
+
+=cut
+
+sub error
+{
+  my ($self, $message) = @_;
+
+  die 'Error procesing ' . $self->tmp_filename . "\n  $message";
+} # end error
+
+#---------------------------------------------------------------------
 # These methods are likely to be overloaded in subclasses:
 
 =method collect_commands
@@ -209,7 +252,7 @@ sub _insert_sections
 
     next unless @list;
 
-    die "Can't insert $type nonexistent section $list[$index]"
+    $self->error("Can't insert $type nonexistent section $list[$index]")
         unless grep { $_ eq $list[$index] } @$sectionsList;
 
 =diag C<< Can't insert before/after nonexistent section %s >>
@@ -255,8 +298,7 @@ sub required_attr
     my $v = $self->$_;
     defined $v
         ? $v
-        : die('Error procesing ' . $self->tmp_filename .
-              ":\n  The $section section requires you to set `$_'\n")
+        : $self->error("The $section section requires you to set `$_'\n")
   } @_;
 } # end required_attr
 
@@ -315,6 +357,13 @@ sub _find_sort_order
 
   # First, see if the document specifies the sort order:
   my $blocks = $self->tmp_collected->{"Pod::Loom-sort_$type"};
+
+  if ($self->tmp_collected->{"Pod::Loom-no_sort_$type"}) {
+    $self->error("You used both no_sort_$type and sort_$type\n")
+        if $blocks;
+
+    return;
+  } # end if document says no sorting
 
   if ($blocks) {
     my @sortFirst;
@@ -456,7 +505,8 @@ sub collect_sections
   my %section;
 
   foreach my $h (@$heads) {
-    $h =~ /^=head1\s+(.+?)(?=\n*\z|\n\n)/ or die "Can't find heading in $h";
+    $h =~ /^=head1\s+(.+?)(?=\n*\z|\n\n)/
+        or $self->error("Can't find heading in $h");
     my $title = $1;
 
     if ($expectedSection{$title}) {
@@ -637,7 +687,7 @@ sub join_entries
   $pod .= "\n=over\n" if $newcmd eq 'item';
 
   foreach (@$entries) {
-    s/^=\S+/=$newcmd/ or die "Bad entry $_";
+    s/^=\S+/=$newcmd/ or $self->error("Bad entry $_");
     $pod .= "\n$_";
   } # end foreach
 
@@ -681,7 +731,7 @@ have any Pod::Loom-group_COMMAND blocks.  See L</"Pod::Loom-group_COMMAND">.
 
   foreach my $header (@$groupHeaders) {
     $header =~ s/^\s*(\S+)\s*?\n//
-        or die "No category in Pod::Loom-group_$cmd\n$header";
+        or $self->error("No category in Pod::Loom-group_$cmd\n$header");
 
 =diag C<< No category in Pod::Loom-group_%s >>
 
@@ -698,7 +748,7 @@ have any Pod::Loom-group_COMMAND blocks.  See L</"Pod::Loom-group_COMMAND">.
     }
 
     unless (delete $groups->{$type}) {
-      warn "No entries for =$cmd-$type";
+      $self->warning("No entries for =$cmd-$type");
       next;
     }
 
@@ -708,7 +758,7 @@ have any Pod::Loom-group_COMMAND blocks.  See L</"Pod::Loom-group_COMMAND">.
   } # end foreach $header in @$groupHeaders
 
   if (%$groups) {
-    warn "You used =$cmd, but had no Pod::Loom-group_$cmd * section\n"
+    $self->warning("You used =$cmd, but had no Pod::Loom-group_$cmd * section\n")
         if delete $groups->{''};
 
 =diag C<< You used =%s, but had no Pod::Loom-group_$cmd %s section >>
@@ -718,7 +768,7 @@ you use.  Entries without a category are placed in the C<*> category.
 
 =cut
 
-    warn "You used =$cmd-$_, but had no Pod::Loom-group_$cmd $_ section\n"
+    $self->warning("You used =$cmd-$_, but had no Pod::Loom-group_$cmd $_ section\n")
         for sort keys %$groups;
 
     die "Terminating because of errors\n";
