@@ -2,7 +2,8 @@ Revision history for Pod-Loom
 
 0.03   NOT
 	- If the template returns no POD, don't add a =cut
-	- Changed required_attr to include filename in error message
+	- Include filename in error messages and warnings
+	  Added the error & warning methods to Template
 
 0.02   October 20, 2009
 	- INCOMPATIBLE CHANGE
